# amber

./: Makefile.am  README  aclocal.m4  bootstrap  config.h.in  configure.ac
amber/: Makefile.am  amber.c  amber.h  exception.c  global.c  internal.h  load.c
js/src/: Makefile.am
modules/: Exec.c  File.c  Makefile.am  Mutex.c  Thread.c  environment.c
