noinst_LTLIBRARIES = libjs.la

noinst_HEADERS = js.msg \
                 jsapi.h \
                 jsarena.h \
                 jsarray.h \
                 jsatom.h \
                 jsbit.h \
                 jsbool.h \
                 jsclist.h \
                 jscntxt.h \
                 jscompat.h \
                 jsconfig.h \
                 jscpucfg.h \
                 jsdate.h \
                 jsdbgapi.h \
                 jsdhash.h \
                 jsdtoa.h \
                 jsemit.h \
                 jsexn.h \
                 jsfile.h \
                 jsfile.msg \
                 jsfun.h \
                 jsgc.h \
                 jshash.h \
                 jsinterp.h \
                 jslibmath.h \
                 jslock.h \
                 jslong.h \
                 jsmath.h \
                 jsnum.h \
                 jsobj.h \
                 jsopcode.h \
                 jsosdep.h \
                 jsotypes.h \
                 jsparse.h \
                 jsprf.h \
                 jsprvtd.h \
                 jspubtd.h \
                 jsregexp.h \
                 jsscan.h \
                 jsscope.h \
                 jsscript.h \
                 jsshell.msg \
                 jsstddef.h \
                 jsstr.h \
                 jstypes.h \
                 jsutil.h \
                 jsxdrapi.h \
                 prmjtime.h \
                 resource.h

libjs_la_SOURCES = jsapi.c \
                   jsarena.c \
                   jsarray.c \
                   jsatom.c \
                   jsbool.c \
                   jscntxt.c \
                   jscpucfg.c \
                   jsdate.c \
                   jsdbgapi.c \
                   jsdhash.c \
                   jsdtoa.c \
                   jsemit.c \
                   jsexn.c \
                   jsfile.c \
                   jsfun.c \
                   jsgc.c \
                   jshash.c \
                   jsinterp.c \
                   jslock.c \
                   jslog2.c \
                   jslong.c \
                   jsmath.c \
                   jsnum.c \
                   jsobj.c \
                   jsopcode.c \
                   jsparse.c \
                   jsprf.c \
                   jsregexp.c \
                   jsscan.c \
                   jsscope.c \
                   jsscript.c \
                   jsstr.c \
                   jsutil.c \
                   jsxdrapi.c \
                   prmjtime.c

libjs_la_LIBADD = -lm
